# TrustSignal

./: .env.example  .env.local  .eslintrc.cjs  .gitignore  .gitleaks.toml  .gitmodules  .mcp.json  .vercelignore  AGENTS.md  BLOCKED.md  CHANGELOG.md  COPYRIGHT.md  DECISIONS.md  LICENSE  NOTICE  PROJECT_PLAN.md  README.md  SECURITY.md  SECURITY_CHECKLIST.md  SECURITY_REMEDIATION_WORK_LOG.md  TASKS.md  USER_MANUAL.md  attestations.sqlite  demo.js  docker-compose.yml  openapi.json  openapi.yaml  package-lock.json  package.json  plans.md  schema.sqlite.sql  trustsignal-demo.js  trustsignal_tests.sh  tsconfig.base.json  vercel.api.json  vercel.json  vitest.config.ts
.agents/: executor-agent.md  primary-agent.md
.devcontainer/: devcontainer.json
.githooks/: pre-commit
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  pull_request_template.md
.junie/: AGENTS.md
.playwright-cli/: page-2026-03-03T16-30-37-739Z.yml  page-2026-03-03T16-30-46-570Z.yml
TrustSignal/: README.md  pyproject.toml
api/: AGENTS.override.md  [...path].ts
bench/: README.md  run-bench.ts  scenarios.md
circuits/non_mem_gadget/: Cargo.toml
circuits/non_mem_gadget/benches/: bench_output.json  non_mem_bench.rs
circuits/non_mem_gadget/src/: attestation.rs  lib.rs  merkle.rs  revocation.rs
circuits/non_mem_gadget/tests/: non_membership.rs  revocation.rs  zkp_service.rs
demo/: README.md  demo-script.ts  sample-artifact.json  tampered-artifact.json
docs/: CANONICAL_MESSAGING.md  IMPLEMENTATION_PLAN_PASSIVE_INSPECTOR.md  INCIDENT_RESPONSE_PLAN.md  IT_INSTALLATION_MANUAL.md  (+17 more)
(+505 files in other folders)
