[package]
name = "non_mem_gadget"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
halo2_proofs = "0.3.0"
halo2_poseidon = "0.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[[bench]]
name = "non_mem_bench"
harness = false
