[package]
name = "non_mem_gadget"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "0.22"
halo2_gadgets = { version = "0.4", features = ["unstable-sha256-gadget"] }
halo2_proofs = "0.3.0"
halo2_poseidon = "0.1.0"
rand_core = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "non_mem_bench"
harness = false
